# youbot_picknplace

./: CMakeLists.txt  README.md  catkin_make_clean.sh  catkin_make_wipe.sh  catkin_make_youbot_picknplace.sh  package.xml
action/: MoveToPosition.action
include/youbot_picknplace/: move_to_position.hpp
launch/: object_listener.launch
msg/: Num.msg
src/: move_to_position_client.cpp  plan_motion_client.cpp  plan_motion_server.cpp
youbot_picknplace/agent/: CMakeLists.txt  package.xml
youbot_picknplace/agent/src/: agent.cpp  agent_ros_nav.cpp
youbot_picknplace/hl_planner/: CMakeLists.txt  package.xml
youbot_picknplace/hl_planner/cfg/: action_plan.cfg  initial.yaml  settings.yaml
youbot_picknplace/hl_planner/include/hl_planner/: hl_planner.hpp
youbot_picknplace/hl_planner/launch/: hl_planner.launch
youbot_picknplace/hl_planner/src/: hl_planner.cpp  start_detection.sh  stop_detection.sh
youbot_picknplace/motion/: CMakeLists.txt  package.xml
youbot_picknplace/motion/include/motion/: gripper_pose.hpp  move_gripper.hpp  move_to_pose.hpp  move_to_position.hpp  move_to_posture.hpp
youbot_picknplace/motion/src/: gripper_pose.cpp  motion.cpp  move_gripper.cpp  move_gripper_client.cpp  move_to_pose.cpp  move_to_pose_client.cpp  move_to_position.cpp  move_to_position_client.cpp  move_to_posture.cpp  move_to_posture_client.cpp
youbot_picknplace/motion_planning/: CMakeLists.txt  package.xml
youbot_picknplace/motion_planning/include/motion_planning/: motion_planner.hpp  plan_approach.hpp  plan_approach_object.hpp  plan_go_home.hpp  plan_listen_aoi.hpp  plan_object_detection.hpp  plan_pick.hpp  plan_place.hpp  plan_sensed_approach.hpp
youbot_picknplace/motion_planning/src/: motion_planner.cpp  motion_planning.cpp  motion_planning_client.cpp  plan_approach.cpp  plan_approach_client.cpp  plan_approach_object.cpp  plan_approach_object_client.cpp  plan_go_home.cpp  plan_go_home_client.cpp  plan_listen_aoi.cpp  plan_listen_aoi_client.cpp  plan_object_detection.cpp  plan_object_detection_client.cpp  plan_pick.cpp  plan_pick_client.cpp  plan_place.cpp  plan_place_client.cpp  plan_sensed_approach.cpp
youbot_picknplace/navigation/: CMakeLists.txt  package.xml
youbot_picknplace/navigation/include/navigation/: move_to_position.hpp
youbot_picknplace/navigation/src/: move_to_position.cpp  move_to_position_client.cpp  navigation.cpp
youbot_picknplace/sensing/: CMakeLists.txt  package.xml
youbot_picknplace/sensing/conf/: detection.object.ros.ork  detection.table.ros.ork
youbot_picknplace/sensing/include/sensing/: object_detection.hpp
youbot_picknplace/sensing/launch/: object_detection.launch  object_listener.launch
youbot_picknplace/sensing/src/: object_detection.cpp  object_detection_client.cpp  object_listener.cpp  sensing.cpp
youbot_picknplace/youbot_picknplace/: CMakeLists.txt  package.xml
youbot_picknplace/youbot_picknplace/conf/: detection.table.ros.ork
youbot_picknplace/youbot_picknplace/data/: cube.stl  duck.stl
youbot_picknplace/youbot_picknplace/launch/: camera.launch  detection.launch  link_agents.launch  motion_planning.launch  picknplace.launch  prepare.launch  start.launch  start_sim.launch  tabletop.launch
youbot_picknplace/youbot_picknplace_msgs/motion_msgs/: CMakeLists.txt  package.xml
youbot_picknplace/youbot_picknplace_msgs/motion_msgs/action/: MoveGripper.action  MoveToPose.action  MoveToPosition.action  MoveToPosture.action
youbot_picknplace/youbot_picknplace_msgs/motion_msgs/srv/: GripperPose.srv
youbot_picknplace/youbot_picknplace_msgs/motion_planning_msgs/: CMakeLists.txt  package.xml
youbot_picknplace/youbot_picknplace_msgs/motion_planning_msgs/action/: PlanApproach.action  PlanApproachObject.action  PlanGoHome.action  PlanListenAoi.action  PlanPick.action  (+3 more)
youbot_picknplace/youbot_picknplace_msgs/navigation_msgs/: CMakeLists.txt  package.xml
youbot_picknplace/youbot_picknplace_msgs/sensing_msgs/: CMakeLists.txt  package.xml
(+3 files in other folders)
