<?xml version="1.0"?>
<package>
  <name>youbot_picknplace</name>
  <version>0.0.0</version>
  <description>The youbot_picknplace package</description>


  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="alexandre@todo.todo">alexandre</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>opencv_candidate</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>opencv_candidate</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>tf</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>